--- a/home/index.html
+++ b/home/index.html
@@ -339,8 +339,8 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_4.png" alt="">
-                            <a href="./portfolio/eka.html">
+                            <img src="../assets/image/portfolio/pf_4.png" alt="">
+                            <a href="../portfolio/eka.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>EKA Portfolio App</h5>
@@ -351,8 +351,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_5.png" alt="">
-                            <a href="./portfolio/clear.html">
+                            <img src="../assets/image/portfolio/pf_5.png" alt="">
+                            <a href="../portfolio/clear.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Clear Subtitle Tool App</h5>
@@ -363,8 +363,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_6.png" alt="">
-                            <a href="./portfolio/alga-energy.html">
+                            <img src="../assets/image/portfolio/pf_6.png" alt="">
+                            <a href="../portfolio/alga-energy.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Clear Subtitle Tool App</h5>
@@ -378,8 +378,8 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_7.png" alt="">
-                            <a href="./portfolio/pressure-app.html">
+                            <img src="../assets/image/portfolio/pf_7.png" alt="">
+                            <a href="../portfolio/pressure-app.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Clear Subtitle Tool App</h5>
@@ -390,8 +390,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_8.png" alt="">
-                            <a href="./portfolio/twaddan.html">
+                            <img src="../assets/image/portfolio/pf_8.png" alt="">
+                            <a href="../portfolio/twaddan.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Twaddan Car Wash App</h5>
@@ -402,8 +402,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper">
-                            <img src="./assets/image/portfolio/pf_9.png" alt="">
-                            <a href="./portfolio/groom.html">
+                            <img src="../assets/image/portfolio/pf_9.png" alt="">
+                            <a href="../portfolio/groom.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Groom HR Management App</h5>
@@ -416,8 +416,8 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_10.png" alt="">
-                            <a href="./portfolio/bigmenu.html">
+                            <img src="../assets/image/portfolio/pf_10.png" alt="">
+                            <a href="../portfolio/bigmenu.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Bigmenu Grocery App</h5>
@@ -428,8 +428,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="./assets/image/portfolio/pf_11.png" alt="">
-                            <a href="./portfolio/bigmenu.html">
+                            <img src="../assets/image/portfolio/pf_11.png" alt="">
+                            <a href="../portfolio/bigmenu.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Little Brahma E-Commerce App</h5>
