--- a/demo.html
+++ b/demo.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Example</title>
+    <title>Static Page with Path Variable</title>
     <style>
         /* Some basic styling for clarity */
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #eee;
+            padding: 10px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline-block;
+            margin-right: 10px;
+        }
+
         section {
             margin: 20px;
             padding: 20px;
@@ -17,77 +43,58 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Static Page with Path Variable</h1>
+    </header>
+
     <nav>
         <ul>
-            <!-- External link to another page -->
-            <li><a href="another-page.html">Go to Another Page</a></li>
-            
-            <!-- Internal link to a section on the same page -->
-            <li><a href="/section2">Go to Section 2</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
 
-    <section id="section1">
-        <h2>Section 1</h2>
-        <p>This is the content of Section 1.</p>
-    </section>
-<div>
-  <pre>dddddd
-
-    <dd>
-      <datagrid><datagrid>d</datagrid></datagrid>
-
-      dfds
-      dfdsf
-
-
-      dsfas
-      <dd>
-
-
-
-
-
-
-
-        dddd
-      </dd>
-
-
-      sdfdf
-
-
-
-      dfd
-    </dd>
-  </pre>
-</div>
-    <section id="section2">
-        <h2>Section 2</h2>
-        <p>This is the content of Section 2.</p>
+    <section id="content">
+        <!-- Content will be dynamically loaded here based on the path -->
     </section>
 
     <script>
-        // Handle internal navigation using JavaScript
         document.addEventListener('DOMContentLoaded', function () {
-            const navLinks = document.querySelectorAll('nav a');
-            navLinks.forEach(function (link) {
+            // Handle navigation based on path
+            navigate(window.location.pathname);
+
+            // Listen for navigation events
+            window.addEventListener('popstate', function (event) {
+                navigate(event.state.path);
+            });
+
+            // Handle navigation when a link is clicked
+            document.querySelectorAll('nav a').forEach(function (link) {
                 link.addEventListener('click', function (event) {
-                    event.preventDefault(); // Prevent the default behavior of the anchor link
-
-                    const href = this.getAttribute('href');
-                    const targetSectionId = href.substring(1); // Remove the leading '/'
-
-                    const targetSection = document.getElementById(targetSectionId);
-
-                    if (targetSection) {
-                        // Scroll to the target section
-                        targetSection.scrollIntoView({
-                            behavior: 'smooth'
-                        });
-                    }
+                    event.preventDefault();
+                    const path = this.getAttribute('href');
+                    navigate(path);
+                    window.history.pushState({ path }, '', path);
                 });
             });
+
+            // Function to load content based on the path
+            function navigate(path) {
+                const contentSection = document.getElementById('content');
+
+                // Update content based on the path
+                switch (path) {
+                    case '/about':
+                        contentSection.innerHTML = '<h2>About Us</h2><p>This is the about page content.</p>';
+                        break;
+                    case '/contact':
+                        contentSection.innerHTML = '<h2>Contact Us</h2><p>This is the contact page content.</p>';
+                        break;
+                    default:
+                        contentSection.innerHTML = '<h2>Welcome</h2><p>This is the home page content.</p>';
+                }
+            }
         });
     </script>
 </body>
