--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         500 companies.
                     </p>
                     <h6>sainumechpd@gmail.com</h6>
-                    <h6>+91 7760540078</h6>
+                        <h6>+91-7760540078</h6>
                     <a href="../assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
                             class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>
@@ -558,7 +558,8 @@
                             <div class="col-md-5">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="../assets/image/testmonial/prosenjith.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/prosenjith.jpg"
+                                            class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -680,67 +681,104 @@
 
     <section class="section resume mx-5" id="resume">
         <div class="container text-center">
-            <p class="section-subtitle">bhal ?</p>
+            <p class="section-subtitle">My Qualifications ?</p>
             <h6 class="section-title mb-5">Resume</h6>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="education">
                     <div class="colum-header">
                         <i class="fas fa-trophy"></i>
                         <h4>Education</h4>
                     </div>
-                    <div class="card">
-                        <p class="mb-3"> 2012 - 2014</p>
-                        <p class="mb-2"><strong>M.sc - Product Design</strong></p>
-                        <p class="mb-2"><strong>Coventry University United Kingdom Regular</strong> </p>
-                        <p class="mb-2 p-class"> Master Degree in Product Design covered areas such as user-centered
-                            design,
-                            Design management, Design Innovation, and
-                            Design technology.</p>
-                        <hr />
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="card">
+                                <p class="mb-3"> 2012 - 2014</p>
+                                <p class="mb-2"><strong>M.sc - Product Design</strong></p>
+                                <p class="mb-2"><strong>Coventry University United Kingdom Regular</strong> </p>
+                                <p class="mb-2 p-class"> Master Degree in Product Design covered areas such as
+                                    user-centered
+                                    design,
+                                    Design management, Design Innovation, and
+                                    Design technology.</p>
+                                <hr />
+                            </div>
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card">
+                                <p class="mb-3"> 2010 - 2012</p>
+                                <p class="mb-2"><strong>M.B.A - Master of business administarion</strong></p>
+                                <p class="mb-2"><strong>Indian School of Business Management
+                                    </strong> </p>
+                                <p class="mb-2 p-class"> Master of Business Administration
+                                    MBA graduated with expertise in strategic management, project leadership, and data
+                                    analysis.
+                                    Proven ability to drive results and contribute to organizational success through
+                                    strong
+                                    analytical and communication skills.</p>
+                                <hr />
+                            </div>
+                        </div>
                     </div>
-                    <div class="card">
-                        <p class="mb-3"> 2010 - 2012</p>
-                        <p class="mb-2"><strong>M.B.A - Master of business administarion</strong></p>
-                        <p class="mb-2"><strong>Indian School of Business Management
-                            </strong> </p>
-                        <p class="mb-2 p-class"> Master of Business Administration
-                            MBA graduated with expertise in strategic management, project leadership, and data analysis.
-                            Proven ability to drive results and contribute to organizational success through strong
-                            analytical and communication skills.</p>
-                        <hr />
-                    </div>
-
 
                 </div>
             </div>
-            <div class="col-md-6">
+        </div>
+        <div class="row">
+            <div class="col-md-12">
                 <div class="experience">
                     <div class="colum-header">
                         <i class="fas fa-briefcase"></i>
                         <h4>Experience</h4>
                     </div>
-                    <div class="card">
-                        <p class="mb-3"> Aug 2022 - Present</p>
-                        <p class="mb-2"><strong>User Experience Lead</strong> </p>
-                        <p class="mb-2"><strong> Optum Global Solutions International B.V., Bengaluru</strong></p>
-                        <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <hr />
-                    </div>
-                    <div class="card">
-                        <p class="mb-3"> Aug 2019 - Aug 2022</p>
-                        <p class="mb-2"><strong>Senior UX Designer</strong> </p>
-                        <p class="mb-2"><strong> Yokogawa IA Technologies Pvt. Ltd, Bengaluru</strong></p>
-                        <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <hr />
-                    </div>
-                    <div class="card">
-                        <p class="mb-3"> Sep 2017 - Aug 2019</p>
-                        <p class="mb-2"><strong>Senior UX Designer</strong> </p>
-                        <p class="mb-2"><strong> Prime Focus Technologies, Bengaluru</strong></p>
-                        <p class="mb-2 p-class"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <hr />
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="card">
+                                <p class="mb-3"> Aug 2022 - Present</p>
+                                <p class="mb-2"><strong>User Experience Lead</strong> </p>
+                                <p class="mb-2"><strong> Optum Global Solutions International B.V., Bengaluru</strong></p>
+                                <div mb-2 p-class>
+                                    <ul>
+                                        <li>Strategic Planning</li>
+                                        <li>Team leadership</li>
+                                        <li>Wire framing & Prototyping</li>
+                                        <li>User Research</li>
+                                        <li>Usability Testing</li>
+                                        <li>Project Management</li>
+                                        <li>Collaboration with Cross-functional Teams</li>
+                                        <li>Accessibility</li>
+                                    </ul>
+                                </div>
+                                <hr />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card">
+                                <p class="mb-3"> Aug 2019 - Aug 2022</p>
+                                <p class="mb-2"><strong>Senior UX Designer</strong> </p>
+                                <p class="mb-2"><strong> Yokogawa IA Technologies Pvt. Ltd, Bengaluru</strong></p>
+                                <div mb-2 p-class>
+                                    <ul>
+                                        <li>Team Management</li>
+                                        <li>User Research</li>
+                                        <li>Wire framing & Prototyping</li>
+                                        <li>Usability Testing</li>
+                                        <li>Cross functional team collaboration</li>
+                                        <li>Project Management</li>
+                                    </ul>
+                                </div>
+                                <hr />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <p class="mb-3"> Sep 2017 - Aug 2019</p>
+                                <p class="mb-2"><strong>Senior UX Designer</strong> </p>
+                                <p class="mb-2"><strong> Prime Focus Technologies, Bengaluru</strong></p>
+                                <hr />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -758,13 +796,13 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
+            <form id="contactForm" method="" action="" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
-                        <input type="text" size="50" class="form-control" placeholder="Your Name" required>
+                        <input type="text" name="name" id="name" size="50" class="form-control" placeholder="Your Name" required>
                     </div>
                     <div class="form-group col-sm-6">
-                        <input type="email" class="form-control" placeholder="Enter Email" requried>
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email" requried>
                     </div>
                     <div class="form-group col-sm-12">
                         <textarea name="comment" id="comment" rows="6" class="form-control"
