--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         500 companies.
                     </p>
                     <h6>sainumechpd@gmail.com</h6>
-                        <h6>+91-7760540078</h6>
+                    <h6>+91-7760540078</h6>
                     <a href="../assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
                             class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>
@@ -246,23 +246,23 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="../assets/image/portfolio/pf_3.png" alt="">
-                        <a href="../portfolio/eot-staff.html">
+                        <img src="../assets/image/portfolio/pf_4.png" alt="">
+                        <a href="../portfolio/eka.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>EOT Staff Portfolio App</h5>
+                                    <h5>EKA Portfolio App</h5>
                                 </div>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="img-wrapper">
-                        <img src="../assets/image/portfolio/pf_1.png" alt="">
-                        <a href="../portfolio/lb-hire-designers.html">
+                    <div class="img-wrapper  grid-item">
+                        <img src="../assets/image/portfolio/pf_3.png" alt="">
+                        <a href="../portfolio/eot-staff.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Little Brahma Hire Designers App</h5>
+                                    <h5>EOT Staff Portfolio App</h5>
                                 </div>
                             </div>
                         </a>
@@ -275,7 +275,7 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="../assets/image/portfolio/pf_4.png" alt="">
+                                <img src="../assets/image/portfolio/pf_1.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -339,11 +339,11 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
-                            <img src="../assets/image/portfolio/pf_4.png" alt="">
-                            <a href="../portfolio/eka.html">
+                            <img src="../assets/image/portfolio/pf_1.png" alt="">
+                            <a href="../portfolio/lb-hire-designers.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
-                                        <h5>EKA Portfolio App</h5>
+                                        <h5>Little Brahma Hire Designers App</h5>
                                     </div>
                                 </div>
                             </a>
@@ -737,7 +737,8 @@
                             <div class="card">
                                 <p class="mb-3"> Aug 2022 - Present</p>
                                 <p class="mb-2"><strong>User Experience Lead</strong> </p>
-                                <p class="mb-2"><strong> Optum Global Solutions International B.V., Bengaluru</strong></p>
+                                <p class="mb-2"><strong> Optum Global Solutions International B.V., Bengaluru</strong>
+                                </p>
                                 <div mb-2 p-class>
                                     <ul>
                                         <li>Strategic Planning</li>
@@ -799,10 +800,12 @@
             <form id="contactForm" method="" action="" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
-                        <input type="text" name="name" id="name" size="50" class="form-control" placeholder="Your Name" required>
+                        <input type="text" name="name" id="name" size="50" class="form-control" placeholder="Your Name"
+                            required>
                     </div>
                     <div class="form-group col-sm-6">
-                        <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email" requried>
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email"
+                            requried>
                     </div>
                     <div class="form-group col-sm-12">
                         <textarea name="comment" id="comment" rows="6" class="form-control"
