--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="img-wrapper  grid-item">
+                    <div class="img-wrapper ">
                         <img src="../assets/image/portfolio/pf_3.png" alt="">
                         <a href="../portfolio/eot-staff.html">
                             <div class="overlay">
