--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="../assets/image/profile2.jpg" class="about-img"
+                    <img src="../assets/image/profile.jpg" class="about-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
@@ -99,8 +99,12 @@
                             kingdom.</strong> I am proud to have received 4 UX/UI Design awards from 3 reputed fortune
                         500 companies.
                     </p>
-                    <h6>sainumechpd@gmail.com</h6>
-                    <h6>+91-7760540078</h6>
+                    <div class="mail-withphone">
+                        <h6>sainumechpd@gmail.com</h6>
+                        
+                        <h6>+91-7760540078</h6>
+                    </div>
+                    
                     <a href="../assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
                             class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>
