--- a/portfolio/eot-camp-director.html
+++ b/portfolio/eot-camp-director.html
@@ -18,7 +18,7 @@
 <body>
     <header class="sticky" style="background: #95B8D1;">
         <div class="logo">Expert Online Training</div>
-        <div class="hamburger">
+        <div class="hamburger" onclick="toggleNav()">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -29,34 +29,43 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a onclick="navigateTo('overview')" href="#overview">Overview</a>
+                    <a onclick="navigateTo('about')" href="#about">About</a>
                 </li>
                 <li>
-                    <a onclick="navigateTo('user-flow')" href="#user-flow">User Flow</a>
+                    <a onclick="navigateTo('goal')" href="#goal">Goal</a>
                 </li>
                 <li>
-                    <a onclick="navigateTo('screen')" href="#screen">Screens</a>
+                    <a onclick="navigateTo('user-persona')" href="#user-persona">User-persona</a>
                 </li>
-
+                <li>
+                    <a onclick="navigateTo('main-mapping')" href="#main-mapping">Mind-mapping</a>
+                </li>
+                <li>
+                    <a onclick="navigateTo('user-flow')" href="#user-flow">User-flow</a>
+                </li>
+                <li>
+                    <a onclick="navigateTo('high-fs')" href="#high-fs">High-fedelity-screens</a>
+                </li>
             </ul>
         </nav>
     </header>
+    
 
     <div class="container">
         <img class="pt-2" src="../assets/image/portfolio/pf_2/pf_s1.png" alt="Image 1">
         <img id="overview" src="../assets/image/portfolio/pf_2/pf_s2.png" alt="Image 2">
         <img src="../assets/image/portfolio/pf_2/pf_s3.png" alt="Image 3">
-        <img id="user-flow" src="../assets/image/portfolio/pf_2/pf_s4.png" alt="Image 4">
+        <img src="../assets/image/portfolio/pf_2/pf_s4.png" alt="Image 4">
         <img src="../assets/image/portfolio/pf_2/pf_s5.png" alt="Image 5">
-        <img src="../assets/image/portfolio/pf_2/pf_s6.png" alt="Image 6">
+        <img id="about" src="../assets/image/portfolio/pf_2/pf_s6.png" alt="Image 6">
         <img src="../assets/image/portfolio/pf_2/pf_s7.png" alt="Image 7">
-        <img src="../assets/image/portfolio/pf_2/pf_s8.png" alt="Image 8">
+        <img id="goal" src="../assets/image/portfolio/pf_2/pf_s8.png" alt="Image 8">
         <img src="../assets/image/portfolio/pf_2/pf_s9.png" alt="Image 9">
         <img src="../assets/image/portfolio/pf_2/pf_s10.png" alt="Image 10">
         <img src="../assets/image/portfolio/pf_2/pf_s11.png" alt="Image 11">
-        <img src="../assets/image/portfolio/pf_2/pf_s12.png" alt="Image 12">
+        <img id="user-persona" src="../assets/image/portfolio/pf_2/pf_s12.png" alt="Image 12">
         <img src="../assets/image/portfolio/pf_2/pf_s13.png" alt="Image 13">
-        <img src="../assets/image/portfolio/pf_2/pf_s14.png" alt="Image 14">
+        <img id="main-mapping" src="../assets/image/portfolio/pf_2/pf_s14.png" alt="Image 14">
         <img src="../assets/image/portfolio/pf_2/pf_s15.png" alt="Image 15">
         <img src="../assets/image/portfolio/pf_2/pf_s16.png" alt="Image 16">
         <img src="../assets/image/portfolio/pf_2/pf_s17.png" alt="Image 17">
@@ -67,7 +76,7 @@
         <img src="../assets/image/portfolio/pf_2/pf_s22.png" alt="Image 22">
         <img src="../assets/image/portfolio/pf_2/pf_s23.png" alt="Image 23">
         <img src="../assets/image/portfolio/pf_2/pf_s24.png" alt="Image 24">
-        <img src="../assets/image/portfolio/pf_2/pf_s25.png" alt="Image 25">
+        <img id="user-flow" src="../assets/image/portfolio/pf_2/pf_s25.png" alt="Image 25">
         <img src="../assets/image/portfolio/pf_2/pf_s26.png" alt="Image 26">
         <img src="../assets/image/portfolio/pf_2/pf_s27.png" alt="Image 27">
         <img src="../assets/image/portfolio/pf_2/pf_s28.png" alt="Image 28">
@@ -91,7 +100,7 @@
         <img src="../assets/image/portfolio/pf_2/pf_s46.png" alt="Image 46">
         <img src="../assets/image/portfolio/pf_2/pf_s47.png" alt="Image 47">
         <img src="../assets/image/portfolio/pf_2/pf_s48.png" alt="Image 48">
-        <img src="../assets/image/portfolio/pf_2/pf_s49.png" alt="Image 49">
+        <img id="high-fs" src="../assets/image/portfolio/pf_2/pf_s49.png" alt="Image 49">
         <div class="responsive-iframe-container">
             <iframe width="640" height="360" src="https://www.youtube.com/embed/J6m5obtOo98" frameborder="0" allowfullscreen></iframe>
         </div>
