--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
-                                <img src="./assets/image/portfolio/pf_1.png" alt="">
+                                <img src="./assets/image/portfolio/pf_12.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -303,10 +303,11 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
-                                <img src="./assets/image/portfolio/pf_7.png" alt="">
+                                <img src="./assets/image/portfolio/pf_1.png" alt="">
                             </a>
                         </div>
                     </div>
+                    
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
@@ -322,7 +323,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" id="contact-form-nav">
+                <div class="row" >
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
+                                <img src="./assets/image/portfolio/pf_7.png" alt="">
+                            </a>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
@@ -330,9 +338,9 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4 ">
-                        <div class="img-wrapper grid-item">
-                            <a onclick="navigateTo('contact-form-nav'); zoomSection('target-section')" href="#contact-me">
+                    <div class="col-md-4" id="contact-form-nav">
+                        <div class="img-wrapper grid-item" >
+                            <a onclick=" zoomSection('target-section')" href="#contact-me">
                                 <img src="./assets/image/portfolio/pf_11.png" alt="">
                             </a>
                         </div>
@@ -341,6 +349,18 @@
             </section>
             <section id="hide-section">
                 <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_12.png" alt="">
+                            <a href="./portfolio/oprex-eln.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Oprex ELN App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="img-wrapper ">
                             <img src="./assets/image/portfolio/pf_1.png" alt="">
@@ -365,28 +385,28 @@
                             </a>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
                             <img src="./assets/image/portfolio/pf_6.png" alt="">
                             <a href="./portfolio/alga-energy.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
-                                        <h5>Clear Subtitle Tool App</h5>
+                                        <h5>Alga Energy App</h5>
                                     </div>
                                 </div>
                             </a>
                         </div>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
                             <img src="./assets/image/portfolio/pf_7.png" alt="">
                             <a href="./portfolio/pressure-app.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
-                                        <h5>Clear Subtitle Tool App</h5>
+                                        <h5>Pressure App Yokogawa</h5>
                                     </div>
                                 </div>
                             </a>
@@ -404,6 +424,8 @@
                             </a>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper">
                             <img src="./assets/image/portfolio/pf_9.png" alt="">
@@ -416,8 +438,6 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-md-4">
                         <div class="img-wrapper ">
                             <img src="./assets/image/portfolio/pf_10.png" alt="">
@@ -433,7 +453,7 @@
                     <div class="col-md-4">
                         <div class="img-wrapper ">
                             <img src="./assets/image/portfolio/pf_11.png" alt="">
-                            <a href="./portfolio/bigmenu.html">
+                            <a href="./portfolio/lb-ecommerce.html">
                                 <div class="overlay">
                                     <div class="overlay-infos">
                                         <h5>Little Brahma E-Commerce App</h5>
