--- a/portfolio/oprex-eln.html
+++ b/portfolio/oprex-eln.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <header style="background: #43B4E7;">
-        <div class="logo">Groom</div>
+    <header class="sticky" style="background: linear-gradient(#215F90, #445DED, #68A4EC);">
+        <div class="logo">Oprex ELN</div>
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
@@ -29,10 +29,13 @@
                     <a href="../index.html?password=sainu">Home</a>
                 </li>
                 <li>
-                    <a onclick="navigateTo('overview')" href="#overview">Overview</a>
+                    <a onclick="navigateTo('about')" href="#about">About</a>
                 </li>
                 <li>
-                    <a onclick="navigateTo('user-flow')" href="#user-flow">User Flow</a>
+                    <a onclick="navigateTo('design-process')" href="#design-process">Design-process</a>
+                </li>
+                <li>
+                    <a onclick="navigateTo('user-flow')" href="#user-flow">user-flow</a>
                 </li>
                 <li>
                     <a onclick="navigateTo('screen')" href="#screen">Screens</a>
@@ -43,21 +46,62 @@
     </header>
 
     <div class="container">
-        <img id="sectionId" src="../assets/image/portfolio/pf_9/pf_s1.png" alt="Image 1">
-        <img id="overview" src="../assets/image/portfolio/pf_9/pf_s2.png" alt="Image 2">
-        <img src="../assets/image/portfolio/pf_9/pf_s3.png" alt="Image 3">
-        <img id="user-flow" src="../assets/image/portfolio/pf_9/pf_s4.png" alt="Image 4">
-        <img src="../assets/image/portfolio/pf_9/pf_s5.png" alt="Image 5">
-        <img src="../assets/image/portfolio/pf_9/pf_s6.png" alt="Image 6">
-        <img src="../assets/image/portfolio/pf_9/pf_s7.png" alt="Image 7">
-        <img src="../assets/image/portfolio/pf_9/pf_s8.png" alt="Image 8">
-        <img src="../assets/image/portfolio/pf_9/pf_s9.png" alt="Image 9">
-        <img src="../assets/image/portfolio/pf_9/pf_s10.png" alt="Image 10">
-        <img src="../assets/image/portfolio/pf_9/pf_s11.png" alt="Image 11">
-        <img src="../assets/image/portfolio/pf_9/pf_s12.png" alt="Image 12">
-        <img src="../assets/image/portfolio/pf_9/pf_s13.png" alt="Image 13">
-        <img src="../assets/image/portfolio/pf_9/pf_s14.png" alt="Image 14">
-        <img src="../assets/image/portfolio/pf_9/pf_s15.png" alt="Image 15">
+        <img class="pt-2" src="../assets/image/portfolio/pf_12/pf_s1.png" alt="Image 1">
+        <img id="overview" src="../assets/image/portfolio/pf_12/pf_s2.png" alt="Image 2">
+        <img src="../assets/image/portfolio/pf_12/pf_s3.png" alt="Image 3">
+        <img  src="../assets/image/portfolio/pf_12/pf_s4.png" alt="Image 4">
+        <img  src="../assets/image/portfolio/pf_12/pf_s5.png" alt="Image 5">
+        <img id="about" src="../assets/image/portfolio/pf_12/pf_s6.png" alt="Image 6">
+        <img id="design-process" src="../assets/image/portfolio/pf_12/pf_s7.png" alt="Image 7">
+        <img src="../assets/image/portfolio/pf_12/pf_s8.png" alt="Image 8">
+        <img src="../assets/image/portfolio/pf_12/pf_s9.png" alt="Image 9">
+        <img src="../assets/image/portfolio/pf_12/pf_s10.png" alt="Image 10">
+        <img src="../assets/image/portfolio/pf_12/pf_s11.png" alt="Image 11">
+        <img src="../assets/image/portfolio/pf_12/pf_s12.png" alt="Image 12">
+        <img src="../assets/image/portfolio/pf_12/pf_s13.png" alt="Image 13">
+        <img src="../assets/image/portfolio/pf_12/pf_s14.png" alt="Image 14">
+        <img src="../assets/image/portfolio/pf_12/pf_s15.png" alt="Image 15">
+        <img src="../assets/image/portfolio/pf_12/pf_s16.png" alt="Image 16">
+        <img src="../assets/image/portfolio/pf_12/pf_s17.png" alt="Image 17">
+        <img src="../assets/image/portfolio/pf_12/pf_s18.png" alt="Image 18">
+        <img src="../assets/image/portfolio/pf_12/pf_s19.png" alt="Image 19">
+        <img src="../assets/image/portfolio/pf_12/pf_s20.png" alt="Image 20">
+        <img src="../assets/image/portfolio/pf_12/pf_s21.png" alt="Image 21">
+        <img src="../assets/image/portfolio/pf_12/pf_s22.png" alt="Image 22">
+        <img src="../assets/image/portfolio/pf_12/pf_s23.png" alt="Image 23">
+        <img src="../assets/image/portfolio/pf_12/pf_s24.png" alt="Image 24">
+        <img src="../assets/image/portfolio/pf_12/pf_s25.png" alt="Image 25">
+        <img src="../assets/image/portfolio/pf_12/pf_s26.png" alt="Image 26">
+        <img id="user-flow" src="../assets/image/portfolio/pf_12/pf_s27.png" alt="Image 27">
+        <img src="../assets/image/portfolio/pf_12/pf_s28.png" alt="Image 28">
+        <img src="../assets/image/portfolio/pf_12/pf_s29.png" alt="Image 29">
+        <img src="../assets/image/portfolio/pf_12/pf_s30.png" alt="Image 30">
+        <img src="../assets/image/portfolio/pf_12/pf_s31.png" alt="Image 31">
+        <img src="../assets/image/portfolio/pf_12/pf_s32.png" alt="Image 32">
+        <img src="../assets/image/portfolio/pf_12/pf_s33.png" alt="Image 33">
+        <img src="../assets/image/portfolio/pf_12/pf_s34.png" alt="Image 34">
+        <img src="../assets/image/portfolio/pf_12/pf_s35.png" alt="Image 35">
+        <img src="../assets/image/portfolio/pf_12/pf_s36.png" alt="Image 36">
+        <img src="../assets/image/portfolio/pf_12/pf_s37.png" alt="Image 37">
+        <img src="../assets/image/portfolio/pf_12/pf_s38.png" alt="Image 38">
+        <img src="../assets/image/portfolio/pf_12/pf_s39.png" alt="Image 39">
+        <img src="../assets/image/portfolio/pf_12/pf_s40.png" alt="Image 40">
+        <img src="../assets/image/portfolio/pf_12/pf_s41.png" alt="Image 41">
+        <img src="../assets/image/portfolio/pf_12/pf_s42.png" alt="Image 42">
+        <img src="../assets/image/portfolio/pf_12/pf_s43.png" alt="Image 43">
+        <img src="../assets/image/portfolio/pf_12/pf_s44.png" alt="Image 44">
+        <img id="screen" src="../assets/image/portfolio/pf_12/pf_s45.png" alt="Image 45">
+        <img src="../assets/image/portfolio/pf_12/pf_s46.png" alt="Image 46">
+        <img src="../assets/image/portfolio/pf_12/pf_s47.png" alt="Image 47">
+        <img src="../assets/image/portfolio/pf_12/pf_s48.png" alt="Image 48">
+        <img src="../assets/image/portfolio/pf_12/pf_s49.png" alt="Image 49">
+        <img src="../assets/image/portfolio/pf_12/pf_s50.png" alt="Image 50">
+        <img src="../assets/image/portfolio/pf_12/pf_s51.png" alt="Image 51">
+        <img src="../assets/image/portfolio/pf_12/pf_s52.png" alt="Image 52">
+        <img src="../assets/image/portfolio/pf_12/pf_s53.png" alt="Image 53">
+        <img src="../assets/image/portfolio/pf_12/pf_s54.png" alt="Image 54">
+        <img src="../assets/image/portfolio/pf_12/pf_s55.png" alt="Image 55">
+        
     </div>
 
     <!-- footer -->
