--- a/portfolio/pressure-app.html
+++ b/portfolio/pressure-app.html
@@ -26,7 +26,7 @@
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="../index.html">Home</a>
+                    <a href="../index.html?password=sainu">Home</a>
                 </li>
                 <li>
                     <a onclick="navigateTo('overview')" href="#overview">Overview</a>
